k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: observer-app
  template:
    metadata:
      labels:
        app: observer-app
    spec:
      containers:
        - name: observer
          image: osmenogg/observer:v1
          ports:
            - name: web
              containerPort: 80

          livenessProbe:
            httpGet:
              port: 80
              path: /version
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
