k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observer
spec:
  selector:
    app: observer-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
